# client-kit-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
Unity/ProjectSettings/: ProjectSettings.asset
csharp/: ClientKit.cs
src/: byte_buffer.rs  ffi.rs  ffi_string.rs  lib.rs
src/download/: download_config_extern.rs  download_extern.rs  download_operation_extern.rs  download_service_extern.rs  mod.rs
src/unity_debug/: debug_extern.rs  mod.rs
src/vfs/: mod.rs  zip_archive_extern.rs  zip_file_extern.rs
