[package]
name = "client-kit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "packages/downloader-rs",
    "packages/vfs-rs",
]

[lib]
name = "clientkit"
crate-type = ["staticlib", "cdylib"]

[dependencies]
downloader-rs = { path = "packages/downloader-rs" }
vfs-rs = { path = "packages/vfs-rs" }

[build-dependencies]
csbindgen = { version = "1.9.0" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
debug = 0
debug-assertions = false
strip = "debuginfo"